amigos y seguidores a mostrar

--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -156,16 +156,33 @@
     <div *ngIf="activeTab == 'friends'" class="col-xs-8">
         <h3 *ngIf="!usuario.amigos || usuario.amigos?.length == 0">Aún no tiene amigos en su red.</h3>
         <div class="row">
-            <div *ngFor="let a of usuario.amigos" class="col-xs-6">
-                {{a}}
+            <div *ngFor="let a of usuario.amigos" class="col-xs-4">
+                <button type="button" data-toggle="tooltip" title="Eliminar" (click)="eliminarAmigo(a.username)" class="btn btn-danger btn-circle right"><i class="glyphicon glyphicon-remove"></i></button>
+                <a (click)="goProfile(a.username)">
+                    <div class="card">
+                        <img src="images/image-profile.png">
+                        <div class="container-card">
+                            <h3>{{a.nombre}}</h3>
+                            <br>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
     <div *ngIf="activeTab == 'followers'" class="col-xs-8">
         <h3 *ngIf="!usuario.seguidores || usuario.seguidores?.length == 0">Aún no tiene seguidores en su red.</h3>
         <div class="row">
-            <div *ngFor="let s of usuario.seguidores" class="col-xs-6">
-                {{s}}
+            <div *ngFor="let s of usuario.seguidores" class="col-xs-4">
+                <a (click)="goProfile(s)">
+                    <div class="card">
+                        <img src="images/image-profile.png">
+                        <div class="container-card">
+                            <h3>{{s.nombre}}</h3>
+                            <br>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -188,10 +205,14 @@
             <div class="panel-heading">
                 <button type="button" (click)="addTG()" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-plus"></i></button>
                 <h2 class="center">Trabajos de grado dirigidos</h2>
-                <div class="panel panel-default">
-                    <p *ngIf="usuario.tgDirigidos?.length == 0">No tiene trabajos de grado dirigidos asociados</p>
-                    <div class="panel-body" *ngFor="let tg of usuario.tgDirigidos">
-                        {{tg.nombre}}
+                <p *ngIf="!usuario.tgDirigidos || usuario.tgDirigidos?.length == 0">No tiene trabajos de grado dirigidos asociados</p>
+                <div class="panel panel-default" *ngFor="let tg of usuario.tgDirigidos">
+                    <div class="panel-body">
+                        <p><strong>Título: </strong>{{tg.nombre}}</p>
+                        <p><strong>Periodo fin: </strong>{{tg.periodoFin}}</p>
+                        <p><strong>Descripción: </strong>{{tg.descripcion}}</p>
+                        <p><strong>Número de estudiantes: </strong>{{tg.numEstudiantes}}</p>
+                        <p><strong>Resumen: </strong>{{tg.resumen}}</p>
                     </div>
                 </div>
             </div>
@@ -200,5 +221,21 @@
 </div>
 <div *ngIf="activeTab == 'career'" class="row">
     <div class="col-xs-2"></div>
-    hola
+    <div class="col-xs-8">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <button type="button" (click)="addFormacion()" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-plus"></i></button>
+                <h2 class="center">Formación académica</h2>
+                <p *ngIf="!usuario.formacionAcademica || usuario.formacionAcademica?.length == 0">No tiene formacion académica asociada</p>
+                <div class="panel panel-default" *ngFor="let fa of usuario.formacionAcademica">
+                    <div class="panel-body">
+                        <p><strong>Título: </strong>{{fa.titulo}}</p>
+                        <p><strong>Año: </strong>{{fa.anio}}</p>
+                        <p><strong>Univerisidad: </strong>{{fa.universidad}}</p>
+                        <p><strong>Título del trabajo de grado: </strong>{{fa.tituloTG}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
