--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -2,3 +2,13 @@
     margin:5px;
     white-space: normal;
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
+    max-width: 300px;
+    margin: auto;
+    background: #EBEBEB;
+}
+.container-card{
+    padding: 0 16px;
+}
