Arreglo idea para mostrar idea recien creada, mostrar username en las ideas y limpieza de campos

--- a/src/app/newsfeed/home.component.html
+++ b/src/app/newsfeed/home.component.html
@@ -41,14 +41,15 @@
                 <div class="form-group" *ngIf = "selectedValueTipo == 'PR'">
                     <button type="button" class="btn">Agregar ideas</button>
                 </div>
+                
                 <p-autoComplete [(ngModel)]="selectedTags" [suggestions]="filteredTagsMultiple" (completeMethod)="filterTagMultiple($event)"
                     [minLength]="1" placeholder="tags" field="nombre" [multiple]="true" [ngModelOptions]="{standalone: true}">
                 </p-autoComplete>
-                
+                <br>
                 <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
                 <div class="panel panel-default center" *ngFor = "let i of newIdeas" >
                     <div class="panel panel-danger">
-                        <div class="panel-heading">{{i.tags}}</div>
+                        <div class="panel-heading">{{i.usuario}}</div>
                         <div class="panel-body">{{i.contenido}}</div>
                         <div class="row">
                             <div class="col-xs-4"><button type="button" (click)="operacion(i)" class="btn btn-default btn-block"><i class="glyphicon glyphicon-asterisk"></i> Light</button></div>
