--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -30,6 +30,7 @@ a:hover{
   background: rgba(1, 1, 1, 0.5);
 }
 .modal.fade .modal-dialog, .modal.in .modal-dialog{
+  overflow-y: initial !important;
   position: absolute;
   top: 0;
   right: 0;
@@ -44,6 +45,9 @@ a:hover{
   -webkit-transform: translate(0,-50%);
   transform: translate(0,-50%);
   width:100%;
+
+  height: 100%;
+  overflow-y: auto;
 }
 textarea{
     resize: none;
