--- a/src/app/access/signup.component.css
+++ b/src/app/access/signup.component.css
@@ -45,6 +45,12 @@ img{
     width: 100px;
     height: 100px;
 }
+.thumbnail{
+    color: #0066ff;
+}
+.thumbnail:hover{
+    cursor: pointer;
+}
 .check{
     opacity:0.5;
 	background:gray;
