--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -16,8 +16,10 @@
     <div class="container-fluid">
         <ul class="nav navbar-nav">
             <li [ngClass]="{ 'active': activeTab == 'ideas' }"><a (click)="moveTab('ideas')" class="links">Ideas</a></li>
-            <li [ngClass]="{ 'active': activeTab == 'info' }"><a (click)="moveTab('info')" class="links">Información básica</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'basis' }"><a (click)="moveTab('basis')" class="links">Información básica</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'info' }"><a (click)="moveTab('info')" class="links">Información académica</a></li>
             <li [ngClass]="{ 'active': activeTab == 'friends' }"><a (click)="moveTab('friends')" class="links">Amigos</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'following' }"><a (click)="moveTab('following')" class="links">Siguiendo</a></li>
             <li [ngClass]="{ 'active': activeTab == 'followers' }"><a (click)="moveTab('followers')" class="links">Seguidores</a></li>
             <li [ngClass]="{ 'active': activeTab == 'badges' }"><a (click)="moveTab('badges')" class="links">Insignias</a></li>
             <li *ngIf="usuario.tipoUsuario == 'PROFESOR'" [ngClass]="{ 'active': activeTab == 'tg' }"><a (click)="moveTab('tg')" class="links">TG Dirigidos</a></li>
@@ -64,11 +66,11 @@
         <div [ngClass]="usuario.segundaCarrera ? 'col-xs-6':'col-xs-8'">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <button type="button" (click)="editCarrera(usuario.carrera)" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-pencil"></i></button>
+                    <button type="button" (click)="editCarrera(true)" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-pencil"></i></button>
                     <h2>Carrera {{usuario.carrera.nombre}}</h2>
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <h3>Enfasis:</h3>
+                            <h3>Énfasis:</h3>
                             <p><strong>Principal: </strong>{{usuario.enfasis[0].nombre}}</p>
                             <p *ngIf="usuario.enfasis[1]"><strong>Secundario: </strong>{{usuario.enfasis[1].nombre}}</p>
                         </div>
@@ -107,10 +109,11 @@
         <div *ngIf="usuario.segundaCarrera" class="col-xs-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
+                    <button type="button" (click)="editCarrera(false)" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-pencil"></i></button>
                     <h2>Carrera {{usuario.segundaCarrera.nombre}}</h2>
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <h3>Enfasis:</h3>
+                            <h3>Énfasis:</h3>
                             <p><strong>Principal: </strong>{{usuario.enfasis[2].nombre}}</p>
                             <p *ngIf="usuario.enfasis[3]"><strong>Secundario: </strong>{{usuario.enfasis[3].nombre}}</p>
                         </div>
